--- a/mTime/mTime/Content/style.css
+++ b/mTime/mTime/Content/style.css
@@ -1472,7 +1472,7 @@ td .check-box {
   /* line 1636, D:/mTime/mTime/mTime/scss/style.scss */
   .body_center .bd_ctr_rightpart {
     width: 100%;
-    height: 100%;
+    height: initial;
     float: right;
     position: absolute;
     z-index: 2;
@@ -2827,6 +2827,62 @@ a, a:hover {
     z-index: 1; }
 
 /* line 3106, D:/mTime/mTime/mTime/scss/style.scss */
+.shift_addpart {
+  width: 700px;
+  height: initial;
+  padding: 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
+  /* line 3115, D:/mTime/mTime/mTime/scss/style.scss */
+  .shift_addpart .addpt_box {
+    width: 100%;
+    height: initial;
+    float: left;
+    margin: 0 0 10px 0;
+    padding: 0 0 0 130px;
+    position: relative; }
+    /* line 3123, D:/mTime/mTime/mTime/scss/style.scss */
+    .shift_addpart .addpt_box .addpt_b_tt {
+      width: 130px;
+      height: 30px;
+      line-height: 30px;
+      font-size: 14px;
+      position: absolute;
+      left: 0;
+      top: 0;
+      text-align: right;
+      padding: 0 10px 0 0; }
+    /* line 3135, D:/mTime/mTime/mTime/scss/style.scss */
+    .shift_addpart .addpt_box .addpt_b_input {
+      width: 250px;
+      height: 30px;
+      float: left;
+      line-height: 30px;
+      font-size: 14px;
+      padding: 0 0 0 10px;
+      background-color: #fff;
+      border: 1px #aaa solid; }
+    /* line 3146, D:/mTime/mTime/mTime/scss/style.scss */
+    .shift_addpart .addpt_box .addpt_b_daybox {
+      width: 100%;
+      height: 30px;
+      float: left; }
+      /* line 3151, D:/mTime/mTime/mTime/scss/style.scss */
+      .shift_addpart .addpt_box .addpt_b_daybox .b_dayb_inb {
+        width: 75px;
+        height: 30px;
+        float: left;
+        line-height: 30px;
+        font-size: 14px;
+        padding: 0 0;
+        background-color: #fff;
+        border: 1px #aaa solid;
+        text-align: center;
+        margin: 0 -1px 0 0; }
+
+/* line 3169, D:/mTime/mTime/mTime/scss/style.scss */
 .arrow_up {
   width: 0;
   height: 0;
@@ -2834,7 +2890,7 @@ a, a:hover {
   border-right: 10px solid transparent;
   border-bottom: 10px solid rgba(0, 0, 0, 0.75); }
 
-/* line 3114, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3177, D:/mTime/mTime/mTime/scss/style.scss */
 .arrow_down {
   width: 0;
   height: 0;
@@ -2842,7 +2898,7 @@ a, a:hover {
   border-right: 10px solid transparent;
   border-top: 10px solid rgba(0, 0, 0, 0.75); }
 
-/* line 3122, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3185, D:/mTime/mTime/mTime/scss/style.scss */
 .arrowr_right {
   width: 0;
   height: 0;
@@ -2850,7 +2906,7 @@ a, a:hover {
   border-bottom: 10px solid transparent;
   border-left: 10px solid rgba(0, 0, 0, 0.75); }
 
-/* line 3130, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3193, D:/mTime/mTime/mTime/scss/style.scss */
 .arrow_left {
   width: 0;
   height: 0;
@@ -2858,7 +2914,7 @@ a, a:hover {
   border-bottom: 10px solid transparent;
   border-right: 10px solid rgba(0, 0, 0, 0.75); }
 
-/* line 3138, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3201, D:/mTime/mTime/mTime/scss/style.scss */
 .arrow_up_c {
   width: 0;
   height: 0;
@@ -2866,7 +2922,7 @@ a, a:hover {
   border-right: 10px solid transparent;
   border-bottom: 10px solid #026f5d; }
 
-/* line 3146, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3209, D:/mTime/mTime/mTime/scss/style.scss */
 .arrow_down_c {
   width: 0;
   height: 0;
@@ -2874,7 +2930,7 @@ a, a:hover {
   border-right: 10px solid transparent;
   border-top: 10px solid #026f5d; }
 
-/* line 3154, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3217, D:/mTime/mTime/mTime/scss/style.scss */
 .arrowr_right _c {
   width: 0;
   height: 0;
@@ -2882,7 +2938,7 @@ a, a:hover {
   border-bottom: 10px solid transparent;
   border-left: 10px solid #026f5d; }
 
-/* line 3162, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3225, D:/mTime/mTime/mTime/scss/style.scss */
 .arrow_left_c {
   width: 0;
   height: 0;
@@ -2890,7 +2946,7 @@ a, a:hover {
   border-bottom: 10px solid transparent;
   border-right: 10px solid #026f5d; }
 
-/* line 3171, D:/mTime/mTime/mTime/scss/style.scss */
+/* line 3234, D:/mTime/mTime/mTime/scss/style.scss */
 .special_rtpt_box {
   width: 50% !important;
   padding: 10px !important;
