--- a/mTime/mTime/scss/style.scss
+++ b/mTime/mTime/scss/style.scss
@@ -625,6 +625,38 @@ td {
     }
 }
 
+.table_part {
+    width: 100%;
+    line-height: 30px;
+    margin: 0 0 40px 0;
+    font-size: 12px;
+    position: relative;
+
+    thead {
+        background-color: #aaa;
+        height: 30px;
+
+        tr {
+            th {
+                border-right: 1px #ccc solid;
+                padding: 0 5px;
+                color: #fff;
+            }
+        }
+    }
+
+    tbody {
+        height: 30px;
+
+        tr {
+            td {
+                border-right: 1px #aaa solid;
+                padding: 0 5px;
+            }
+        }
+    }
+}
+
 .footer_row_total {
     width: 100%;
     height: 30px;
@@ -2562,6 +2594,25 @@ ul {
     color: #666;
     margin: 0 2px;
     cursor: pointer;
+}
+
+.btn_reset {
+    width: 24px;
+    line-height: 30px;
+    text-align: left;
+    float: left;
+    font-size: 18px !important;
+    color: #0069ae;
+    margin: 0 2px;
+    cursor: pointer;
+    position: relative;
+
+    div {
+        right: 0;
+        top: 3px;
+        font-size: 12px;
+        position: absolute;
+    }
 }
 
 .btn_edit:hover, .btn_trash:hover, .btn_copy:hover {
